--- a/main.css
+++ b/main.css
@@ -48,3 +48,25 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: lightgray;
+}
+
+.headshot-image {
+    width: 125px;
+    height: 145px;
+    border-radius: 50%;
+}
+
+.project-image {
+    width: 300px;
+    height: 150px;
+}
