--- a/main.css
+++ b/main.css
@@ -52,9 +52,13 @@ table {
 
 
 html {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /* 10px if the browser was 16px*/
     /* 1rem === 10px @ medium browser settings */
     font-size: 62.5%;
+    background-color: gray;
 }
 
 body {
@@ -62,28 +66,34 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: gray;
+    background-color: blue;
     width: 75%;
 }
 
-
-section {
-    
-}
-
 header {
-
+    width: 100%;
+    height: 150px;
 }
 
 main {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 footer {
+    margin-bottom: 50px;
+    text-align: center;
+}
 
+#footer p {
+    color: white;
 }
 
 #nav-bar {
+    display: flex;
+    justify-content: flex-end;
     background-color: yellow;
     width: 100%;
 }
@@ -93,6 +103,29 @@ footer {
     text-decoration: none;
     color: blue;
     margin: 20px 15px;
+}
+
+#welcome-section, #about-me, #projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+}
+
+#welcome-section {
+}
+
+#about-me {
+
+}
+
+#projects {
+
+}
+
+h1, h2, h3, h4 p {
+    color: yellow;
 }
 
 h1 {
@@ -107,14 +140,63 @@ h3 {
     font-size: 2.3rem;
 }
 
+h4 {
+    font-size: 2.0rem;
+}
+
 p {
     font-size: 1.8rem;
 }
 
+.welcome-top-container {
+    margin: 50px 0;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.welcome-bottom-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.welcome-bottom-text-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me-top-container {
+
+}
+
+.about-me-bottom-container {
+    background-color: white;
+    width: 600px;
+    padding: 15px 20px;
+}
+
+.project-tile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-tile h4 {
+    color: fuchsia;
+}
+
+.project-tile p {
+    color: pink;
+}
+
 .headshot-image {
-    width: 125px;
-    height: 145px;
+    width: 250px;
+    height: 290px;
     border-radius: 50%;
+    margin: 0 30px;
 }
 
 .project-image {
@@ -132,14 +214,6 @@ p {
 .fa-twitter, .fa-github, .fa-linkedin-in {
     font-size: 3.5rem;
     margin: 20px 10px;
-}
-
-
-.fa-twitter {
-    color:rgb(34,179,235);
-}
-
-.fa-linkedin-in {
-    color: rgb(0,120,187);
+    color: white;
 }
 
