--- a/main.css
+++ b/main.css
@@ -74,7 +74,6 @@ body {
 
 header {
     width: 100%;
-    height: 150px;
 }
 
 main {
@@ -126,7 +125,10 @@ footer {
 }
 
 #projects {
-
+    width: 65%;
+    border-radius: 5px;
+    padding-bottom: 30px;
+    background-color: gray;
 }
 
 h1, h2, h3, h4 p {
@@ -146,10 +148,11 @@ h2 {
 
 h3 {
     font-size: 3.3rem;
+    margin-bottom: 20px;
 }
 
 h4 {
-    font-size: 3.0rem;
+    font-size: 2.5rem;
 }
 
 p {
@@ -181,8 +184,15 @@ p {
 
 .about-me-bottom-container {
     background-color: white;
-    width: 600px;
+    border-radius: 5px;
+    width: 65%;
     padding: 15px 20px;
+    margin-top: 20px;
+}
+
+.projects-heading {
+    color: orange;
+    padding-top: 20px;
 }
 
 .project-tile {
@@ -190,14 +200,16 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.project-tile h4 {
-    color: fuchsia;
+    margin: 50px 0;
 }
 
 .project-tile p {
     color: pink;
+}
+
+.project-title-heading {
+    color: yellow;
+    margin-top: 20px;
 }
 
 .headshot-image {
@@ -208,10 +220,10 @@ p {
 }
 
 .project-image {
-    width: 300px;
-    height: 150px;
+    width: 600px;
+    height: 325px;
     border-radius: 5px;
-    border: 3px solid green;
+    border: 3px solid orange;
 }
 
 .footer-ul a {
