--- a/main.css
+++ b/main.css
@@ -296,6 +296,10 @@ p {
         line-height: 1.0;
     }
 
+    #welcome-section {
+        margin-bottom: 100px;
+    }
+
     .welcome-top-container {
         flex-direction: column;
         align-items: center;
@@ -307,15 +311,25 @@ p {
     }
 
     .headshot-image {
-        width: 150px;
-        height: 175px;
+        width: 300px;
+        height: 350px;
         border-radius: 50%;
         margin: 20px 30px;
     }
 
+    .about-me-bottom-container {
+        width: 85%;
+    }
+
+    #projects {
+        width: 85%;
+        padding: 0 20px;
+        text-align: center;
+    }
+
     .project-image {
-        width: 150px;
-        height: 75px;
+        width: 275px;
+        height: 160px;
         border-radius: 5px;
         border: 2px solid purple;
     }
